# PhageML

./: .gitignore  .gitmodules  CD47-PhageML.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
phageml/: __init__.py  __main__.py  exceptions.py  phageml.py
phageml/libio/: io.py
sbatch/: template.sh
src/: hello.py  phageml.py
tests/: test_exception.py
